--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="text ml-md-5">
           <h1>You deserve to see a doctor who understands you.</h1>
           <h2>Do you agree?</h2>
-          <a href="/contact/contact.html"><button type="submit" class="btn btn-primary mb-5 mt-3" id="accessbtn">Get Early Access</button></a>
+          <a href="./contact/contact.html"><button type="submit" class="btn btn-primary mb-5 mt-3" id="accessbtn">Get Early Access</button></a>
           </div>
         </div>
         <div class="img text-center">
