--- a/contact/contact.html
+++ b/contact/contact.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light mt-5">
       <div class="container">
-        <a class="navbar-brand ml-sm-5 ml-3" href="../index.html">
+        <a class="navbar-brand ml-sm-5 ml-3" href="./index.html">
           <img src="../img/point a logo black.png" width="100px">
         </a>
         <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
