--- a/contact/contact.html
+++ b/contact/contact.html
@@ -13,7 +13,7 @@
   </head>
   
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light mt-4 mt-md-5">
+    <nav class="navbar navbar-expand-lg navbar-light mt-4 mt-md-5a">
       <div class="container">
         <a class="navbar-brand ml-sm-5 ml-3" href="../index.html">
           <img src="../img/point a logo black.png" width="100px">
